# SnakePS1NoDiscBuild

./: 2D.c  3D.c  Assets.c  Audio.c  CMakeLists.txt  CMakePresets.json  Constants.c  Controller.c  Font.c  MAIN.C  MAKEFILE.mak  README.md  ReadCD.c  Snake.c  Snake.cbp  Snake.cscope_file_list  Snake.layout  main.c
.github/workflows/: dump.yml  main.yml
DATA/AUDIO/: bite1.VAG  bite2.VAG  die1.VAG  die2.VAG  die3.VAG  die4.VAG  hiss.VAG
psn00b_port/: CMakeLists.txt  bite1.vag
psn00b_port/src/: AssetsAudio.c  AssetsTextures.c  Controller.c  die1.vag  main.c  tmd.c  tmd.h
